<resources>
    <string name="app_name">Morfando</string>
    <string name="register_landing">Ingresa para descrubrir una nueva experiencia</string>
    <string name="title_home">@string/app_name</string>
    <string name="title_search">Buscador</string>
    <string name="title_categories">Categorías</string>
    <string name="title_favourites">Favoritos</string>
    <string name="login_google">Continuar con google</string>
    <string name="login_landing">Ingresa para descubrir una nueva experiencia</string>
    <string name="login_owner">Ingresar como dueño de restaurante</string>
    <string name="generic_error">Algo salió mal, vuelve a intentarlo en unos instantes</string>
    <string name="owner_login_title">Ingresa</string>
    <string name="owner_email">Correo electrónico</string>
    <string name="owner_password">Contraseña</string>
    <string name="owner_reenter_password">Repetir contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="login_owner_button">Ingresar</string>
    <string name="owner_register_button">Registrarse</string>
    <string name="owner_register_title">Convertite en un miembro de morfando</string>
    <string name="owner_forgot_password_title">Ingresa el correo que utilizaste para registrarte</string>
    <string name="owner_forgot_password_landing">Te enviaremos un correo electrónico para recuperar tu contraseña</string>
    <string name="owner_forgot_password_button">Recuperar contraseña</string>
    <string name="geo_landing">Para poder disfrutar de morfando te pedimos acceder a tu ubicación!</string>
    <string name="geo_request_button">Permitir compartir ubicación</string>
    <string name="geo_not_now">Ahora no</string>
    <string name="chip_trending">Tendencia</string>
    <string name="chip_classic">Clásicos</string>
    <string name="chip_near">Cercanos</string>
    <string name="chip_cheap">Baratos</string>
    <string name="chip_expensive">Caros</string>
    <string name="home_near_restaurants">Restaurantes cercanos</string>
    <string name="home_near_restaurants_subtitle">Lo mejor de lo mejor cerca tuyo</string>
    <string name="home_cheap_restaurants_title">Restaurantes baratos</string>
    <string name="home_cheap_restaurants_subtitle">Donde podés sacar a tus amigos pero si vas con tu pareja te dejan</string>
    <string name="home_trending_restaurants_title">Restaurantes de moda</string>
    <string name="home_trending_restaurants_subtitle">Lugares que teniendo muchas recomendaciones</string>
    <string name="search_text_hint">¿Qué buscamos hoy?</string>
    <string name="search_filter_hint">Filtrar</string>
    <string name="search_filters_open_now">Abierto ahora</string>
    <string name="search_filters_price_range">Rango de precios</string>
    <string name="search_filters_rating_range">Rango de calificaciones</string>
    <string name="price_range_first">$</string>
    <string name="price_range_second">$$</string>
    <string name="price_range_third">$$$</string>
    <string name="price_range_fourth">$$$$</string>
    <string name="rating_range_one">♥</string>
    <string name="rating_range_two">♥♥</string>
    <string name="rating_range_three">♥♥♥</string>
    <string name="rating_range_four">♥♥♥♥</string>
    <string name="cooking_type_meat">Carne</string>
    <string name="cooking_type_chicken">Pollo</string>
    <string name="cooking_type_pasta">Pasta</string>
    <string name="cooking_type_pizza">Pizza</string>
    <string name="cooking_type_salad">Ensalada</string>
    <string name="cooking_type_sushi">Sushi</string>
    <string name="cooking_type_empanada">Empanada</string>
    <string name="cooking_type_tacos">Tacos</string>
    <string name="search_filters_distance">Distancia</string>
    <string name="search_filters_speciality">Tipo de comida</string>
    <string name="search_filters_accept">Mostrar</string>
    <string name="search_filters_clear">Limpiar filtros</string>
    <string name="search_filters_distance_value">5 Km.</string>
    <string name="open_hours_title">Horarios - %s</string>
    <string name="rating_count">%s reseñas</string>
    <string name="menu_title">Menú</string>
    <string name="about_us_title">Nosotros</string>
    <string name="places_title">Lugar</string>
    <string name="rating_submit_title">Aportar</string>
    <string name="rating_submit_button_text">Escribir reseña</string>
    <string name="ratings_title">Reseñas</string>
    <string name="add_restaurant">Agregar Restaurante</string>
    <string name="restaurant_name">Nombre del restaurante</string>
    <string name="restaurant_street">Calle</string>
    <string name="restaurant_street_number">Numero</string>
    <string name="restaurant_neighborhood">Barrio</string>
    <string name="restaurant_province">Provincia</string>
    <string name="restaurant_save_button">Guardar</string>
    <string name="restaurant_delete_button">Eliminar restaurante</string>
    <string name="restaurant_close_button">Cerrar temporalmente</string>
    <string name="restaurant_country">Pais</string>
    <string name="plate_name">Nombre del item</string>
    <string name="plate_price">Precio del item</string>
    <string name="plate_description">Descripcion del item</string>
    <string name="plate_add_button">Agregar</string>
    <string name="plate_delete_button">Eliminar item</string>
    <string name="error_complete_fields">Completá los campos requeridos</string>
    <string name="error_password_not_match">No coinciden las contraseñas ingresadas</string>
    <string name="name">Nombre</string>
    <string name="loading">Cargando…</string>
    <string name="add_to_favourites">Agregar a favoritos</string>
    <string name="vegan">Vegano</string>
    <string name="celiac">Celíaco</string>
    <string name="menu_title_activity">Menú - %s</string>
    <string name="sunday">Domingo</string>
    <string name="saturday">Sábado</string>
    <string name="friday">Viernes</string>
    <string name="thursday">Jueves</string>
    <string name="wednesday">Miércoles</string>
    <string name="tuesday">Martes</string>
    <string name="monday">Lunes</string>
    <string name="open_hours">Horarios</string>
    <string name="rating">Reseña</string>
    <string name="rating_title">Título de la reseña</string>
    <string name="rating_description">Escriba su reseña</string>
    <string name="rating_publish">Publicar</string>
    <string name="profile">Perfil</string>
    <string name="personal_data">Datos personales</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="preferences">Preferencias</string>
    <string name="my_restaurants">Mis restaurantes</string>
    <string name="feedback">Feedback</string>
    <string name="contact">Contacto</string>
    <string name="language">Idioma</string>
    <string name="terms_conditions">Términos y condiciones</string>
    <string name="policy">Policy</string>
    <string name="preference">Preferencias</string>
    <string name="delete_account">Borrar cuenta</string>
    <string name="address">Dirección</string>
    <string name="street">Calle</string>
    <string name="neighborhood">Barrio</string>
    <string name="town">Localidad</string>
    <string name="state">Provincia</string>
    <string name="country">País</string>
    <string name="kitchen_style">Tipo de comida</string>
    <string name="style">Tipo</string>
    <string name="add_menu">Agregar menú</string>
    <string name="edit_menu">Editar menú</string>
    <string name="photos">Fotos</string>
    <string name="add_photo">Agregar foto</string>
    <string name="save">Guardar</string>
    <string name="number">Número</string>
    <string name="open_hours_template">%s hs. - %s hs.</string>
    <string name="open_hours_closed">Hoy cerrado</string>
    <string name="closed">Cerrado</string>
    <string name="price_range">Rango de precios</string>
    <string name="range">Rango</string>
    <string name="add_item">Agregar item</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="add_item_to_menu">Agregar item al menú</string>
    <string name="category">Categoría</string>
    <string name="price">Precio</string>
    <string name="suitable">Apto</string>
    <string name="suitable_vegan">Apto vegano</string>
    <string name="suitable_celiac">Apto celíaco</string>
    <string name="type">Tipo</string>
    <string name="perfil_photo">Foto de perfil</string>
    <string name="public_user_name">Nombre público de usuario</string>
    <string name="personal_data_updated">Datos personales actualizados correctamente</string>
    <string name="password_updated">Contraseña actualizada correctamente</string>
    <string name="change">Cambiar</string>
    <string name="close_restaurant">Cerrar temporalmente</string>
    <string name="delete_restaurant">Eliminar restaurante</string>
    <string name="open_restaurant">Abrir restaurant</string>
    <string name="updated_restaurant_status">Estado actualizado correctamente</string>
    <string name="deleted_restaurant_status">Restaurant eliminado correctamente</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="no_favs">No tenés favoritos!</string>
    <string name="no_restaurants">No se encontraron restaurants</string>
    <string name="otp_code">Código de recuperación</string>
    <string name="insert_otp_code">Ingresa el código de recuperación</string>
    <string name="validate_otp">Validar código</string>
    <string name="otp_success">La nueva contraseña fue enviada a tu correo electrónico</string>
    <string name="owner_no_restaurants">Todavía no tenés restaurantes cargados</string>
    <string name="about_us">Sobre nosotros</string>
    <string name="edited_restaurant_status">Restaurant modificado satisfactoriamente</string>

    <string-array name="open_hours_array">
        <item>Apertura</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>22:00</item>
        <item>23:00</item>
        <item>24:00</item>
    </string-array>

    <string-array name="close_hours_array">
        <item>Cierre</item>
        <item>24:00</item>
        <item>23:00</item>
        <item>22:00</item>
        <item>20:00</item>
        <item>19:00</item>
        <item>18:00</item>
        <item>17:00</item>
        <item>16:00</item>
        <item>15:00</item>
        <item>14:00</item>
        <item>13:00</item>
        <item>12:00</item>
        <item>11:00</item>
        <item>10:00</item>
        <item>09:00</item>
        <item>08:00</item>
        <item>07:00</item>
        <item>06:00</item>
        <item>05:00</item>
    </string-array>

    <string-array name="states">
        <item>Buenos Aires</item>
        <item>C.A.B.A.</item>
        <item>Catamarca</item>
        <item>Chaco</item>
        <item>Chubut</item>
        <item>Córdoba</item>
        <item>Corrientes</item>
        <item>Entre Ríos</item>
        <item>Formosa</item>
        <item>Jujuy</item>
        <item>La Pampa</item>
        <item>La Rioja</item>
        <item>Mendoza</item>
        <item>Misiones</item>
        <item>Neuquén</item>
        <item>Río Negro</item>
        <item>Salta</item>
        <item>San Juan</item>
        <item>San Luis</item>
        <item>Santa Cruz</item>
        <item>Santa Fe</item>
        <item>Santiago del Estero</item>
        <item>Tierra del Fuego</item>
        <item>Tucumán</item>
    </string-array>

    <string-array name="countries">
        <item>Argentina</item>
    </string-array>
</resources>