<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/design_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:padding="@dimen/base_margin">

    <TextView
        android:id="@+id/search_filters_open_now_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="20sp"
        android:text="@string/search_filters_open_now"
        style="@style/MorfandoTextInputEditText"
        android:layout_marginTop="@dimen/base_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/search_filters_open_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_filters_open_now"
        app:layout_constraintTop_toBottomOf="@id/search_filters_open_now_title"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/search_filters_price_range_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="20sp"
        android:text="@string/search_filters_price_range"
        style="@style/MorfandoTextInputEditText"
        android:layout_marginTop="@dimen/base_margin"
        app:layout_constraintTop_toBottomOf="@id/search_filters_open_now"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/search_filters_price_range_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_filters_price_range_title"
        app:layout_constraintStart_toStartOf="parent"
        app:singleSelection="true">
        <com.google.android.material.chip.Chip
            android:id="@+id/search_filters_price_range_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_range_first" />
        <com.google.android.material.chip.Chip
            android:id="@+id/search_filters_price_range_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_range_second" />
        <com.google.android.material.chip.Chip
            android:id="@+id/search_filters_price_range_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_range_third" />
        <com.google.android.material.chip.Chip
            android:id="@+id/search_filters_price_range_fourth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_range_fourth" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/search_filters_rating_range_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="20sp"
        android:text="@string/search_filters_rating_range"
        style="@style/MorfandoTextInputEditText"
        android:layout_marginTop="@dimen/base_margin"
        app:layout_constraintTop_toBottomOf="@id/search_filters_price_range_group"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/search_filters_rating_range_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_filters_rating_range_title"
        app:layout_constraintStart_toStartOf="parent"
        app:singleSelection="true">
        <com.google.android.material.chip.Chip
            android:id="@+id/search_filters_rating_range_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_range_one" />
        <com.google.android.material.chip.Chip
            android:id="@+id/search_filters_rating_range_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_range_two" />
        <com.google.android.material.chip.Chip
            android:id="@+id/search_filters_rating_range_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_range_three" />
        <com.google.android.material.chip.Chip
            android:id="@+id/search_filters_rating_range_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_range_four" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/search_filters_cooking_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="20sp"
        android:text="@string/search_filters_speciality"
        style="@style/MorfandoTextInputEditText"
        android:layout_marginTop="@dimen/base_margin"
        app:layout_constraintTop_toBottomOf="@id/search_filters_rating_range_group"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/search_filters_speciality_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_filters_cooking_type_title"
        app:layout_constraintStart_toStartOf="parent"
        app:singleSelection="true">
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/search_filters_distance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="20sp"
        android:text="@string/search_filters_distance"
        style="@style/MorfandoTextInputEditText"
        android:layout_marginTop="@dimen/base_margin"
        app:layout_constraintTop_toBottomOf="@id/search_filters_speciality_group"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.slider.Slider
        android:id="@+id/search_filters_distance_slider"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_filters_distance_title"
        app:layout_constraintStart_toStartOf="parent"
        android:valueFrom="5"
        android:valueTo="20"
        android:stepSize="5"
        app:trackColor="#90019592"
        app:tickColor="@color/white"
        app:thumbColor="@color/green"
        app:trackColorActive="@color/green"
        app:tickColorActive="@color/white" />

    <TextView
        android:id="@+id/search_filters_distance_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="15sp"
        tools:text="10 km"
        style="@style/MorfandoTextInputEditText"
        android:layout_marginStart="@dimen/base_margin"
        app:layout_constraintStart_toEndOf="@id/search_filters_distance_slider"
        app:layout_constraintTop_toTopOf="@id/search_filters_distance_slider"
        app:layout_constraintBottom_toBottomOf="@id/search_filters_distance_slider"/>

    <Button
        android:id="@+id/search_filters_clear"
        style="@style/MorfandoButtonTransparentBorderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_filters_clear"
        android:textSize="12sp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_filters_distance_slider" />

    <Button
        android:id="@+id/search_filters_accept"
        style="@style/MorfandoButtonBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_filters_accept"
        android:textSize="12sp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_filters_distance_slider" />
</androidx.constraintlayout.widget.ConstraintLayout>