<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/base_margin"
    android:background="@color/primary">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/add_item_title"
            style="@style/MorfandoTextInputEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/add_item_to_menu" />

        <TextView
            android:id="@+id/category_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="20sp"
            android:paddingBottom="@dimen/base_margin"
            android:layout_marginTop="@dimen/base_margin"
            android:text="@string/category"
            style="@style/MorfandoTextInputEditText"
            app:layout_constraintTop_toBottomOf="@id/add_item_title"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/cooking_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:minHeight="45dp"
            android:backgroundTint="#464C58"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/category_title"
            app:layout_constraintTop_toBottomOf="@id/category_title"/>


        <TextView
            android:id="@+id/item_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="20sp"
            android:paddingBottom="@dimen/base_margin"
            android:layout_marginTop="@dimen/base_margin"
            android:text="@string/type"
            style="@style/MorfandoTextInputEditText"
            app:layout_constraintTop_toBottomOf="@id/cooking_type_spinner"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/item_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:minHeight="45dp"
            android:backgroundTint="#464C58"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/item_type_title"
            app:layout_constraintTop_toBottomOf="@id/item_type_title"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_type_spinner"
            style="@style/MorfandoTextInput">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                style="@style/MorfandoTextInputEditText"
                android:hint="@string/name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_name"
            style="@style/MorfandoTextInput">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                style="@style/MorfandoTextInputEditText"
                android:hint="@string/price"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_price"
            style="@style/MorfandoTextInput">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                style="@style/MorfandoTextInputEditText"
                android:hint="@string/plate_description"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/photos_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="20sp"
            android:paddingBottom="@dimen/base_margin"
            android:layout_marginTop="@dimen/base_margin"
            android:text="@string/photos"
            style="@style/MorfandoTextInputEditText"
            app:layout_constraintTop_toBottomOf="@id/item_description"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/photos_group"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/photos_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/add_photos_title"
                style="@style/MorfandoTextInputEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:text="@string/add_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/ic_baseline_add_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/suitable_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="20sp"
            android:paddingBottom="@dimen/base_margin"
            android:layout_marginTop="@dimen/base_margin"
            android:text="@string/suitable"
            style="@style/MorfandoTextInputEditText"
            app:layout_constraintTop_toBottomOf="@id/photos_group"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/suitable_vegan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suitable_vegan"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/suitable_title"
            app:layout_constraintStart_toStartOf="parent"/>

        <CheckBox
            android:id="@+id/suitable_celiac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suitable_celiac"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/suitable_vegan"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save"
            style="@style/MorfandoButtonBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/suitable_celiac" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>