<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.RequestGeoPermissionActivity">

    <ImageView
        android:id="@+id/geo_logo"
        android:layout_width="80dp"
        android:layout_height="75dp"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginTop="@dimen/base_margin"
        android:src="@drawable/ic_geo_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/geo_landing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:paddingStart="@dimen/base_margin"
        android:paddingEnd="@dimen/base_margin"
        android:paddingBottom="25dp"
        android:text="@string/geo_landing"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/geo_logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/geo_request"
        style="@style/MorfandoButtonTransparentOutlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:drawableStart="@drawable/ic_favorites_24"
        android:text="@string/geo_request_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/geo_landing" />
</androidx.constraintlayout.widget.ConstraintLayout>